# serde_cow

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bytes.rs  lib.rs  str.rs
