[package]
name = "serde_cow"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/GnomedDev/serde_cow"
description = "A library with more efficent serde deserializations for Cow."
keywords = ["cow", "serde", "optimisation", "deserialization", "string"]
categories = ["parsing", "no-std"]
rust-version = "1.56"

[dependencies]
serde = { version = "1.0.197", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_json = "1.0.114"
